--- a/Styles.css
+++ b/Styles.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(pngs/Moon.png);
+    background-image: url(pngs/Moon.png)
 }
 .Centrartext{
     text-align: center;
